bugfix for spacing issue in update container profiles model

--- a/frontend/app/assets/stylesheets/archivesspace/top_containers_bulk.less
+++ b/frontend/app/assets/stylesheets/archivesspace/top_containers_bulk.less
@@ -62,3 +62,6 @@
 .tablesorter-header-inner {
   padding: 0 !important;
 }
+.spacer {
+  height: 30px;
+}
